...
                        }
                    }
                }
            }
            Spacer()
            Button(action: model.submitCurrentAnswer) {
                Text(model.currentQuestionIndex + 1 == model.questions.count ? "SEE MY ERA" : "NEXT")
                    .font(.system(size: 20, weight: .semibold))
                    .foregroundColor(.black)
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(model.selectedAnswerIndex != nil ? Color.white : Color.gray.opacity(0.4))
                    .cornerRadius(16)
...
